# farm

./: .env  .env_prod  .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  Dockerfile  README.md  Rocket.toml  config.json  config_test.json  docker-compose.yml  entrypoint.sh  flags.db  start_sploit.py
.github/: dependabot.yml
.github/workflows/: backend-ci.yml  build-backend.yml  build-flag-sender.yml  build-frontend.yml  docker-compose.yml  frontend-ci.yml  python-check.yml  rust-check.yml  rust-clippy.yml
back/: .dockerignore  .env  Cargo.toml  Dockerfile  Rocket.toml  config.json  config_test.json  entrypoint.sh  start_sploit.py
back/.cargo/: config.toml
back/.sqlx/: query-0001a6e3b5e2ed38377a99b58930ac90dd3dda96dc4b44ae2807e8b22481c71e.json  query-009ab1deed48714de807c65ddd0a49f39f4cae50200038f100d74d1c133434d1.json  query-0a4b39333cd9bf4ad3321554c771f03d9d354af73ed46e2973b3308a5bdd7437.json  query-0e8c7c01f6c3a2c58b3a2249822048fbcb1c539b49cefd78fd52c612039e9a0f.json  query-11e42ab7155f6cb1675b4e2d5ae22bf401bc1a7becb640cdfccd9b6abba7308e.json  query-337c24a8f763030f4278458b8c7bedf12dd57967f743ebcfa1d2fc26a1c6eb3f.json  query-4c8658cc270da20e20b0cdf721891896e87a953b2e9931219db089f0a81b4a9c.json  query-850872fbbcf71d5c0bf808dfdb5da45fe5ddc0c44502c829dfcca2d4c6fc7a31.json  query-997d96afd74f02cdad2b2539ecc68c097662a6355b3a0ce98253db751bfa9398.json  query-bf3ad58476f3de3a87c6f4900d653f65d677742766279adf1ddffcba45c4e0d6.json  query-d768db49d16ac2ad3dfdca8b1621b3558fd3eee14f6024da5e1361bd74d504d4.json  query-d8a7c3d6ec819dd7a3d0024f08e8b41951f94fd97492f129261881cf1295f116.json  query-de48fec97c23d47efef3536b30b4db7da5c5739446b26efb1d09ea90041a9198.json  query-e421c04b05437f03fa9d7bae08744918694598238748eeb59bb1c2b098487b36.json  query-f03482ced2db946df5be598d45ee6a7ff557d0698f811637a521256f7eca2ddc.json  query-f8067eaba480bf0e34121d2986162b951e6683ec8c2ee82acbc66744e38b3dea.json  query-fb47bc4e1b36c8b91be34b08a16c794e55b614c6aaef1ee631186fec3f10203a.json
back/migrations/: 0001_create_flag_status_enum.sql  0002_create_flags_table.sql
back/migrations/2023-07-27-174939_flags/: down.sql
back/src/: cors.rs  lib.rs  main.rs  schema.rs  types.rs
back/src/application/: mod.rs
back/src/application/auth/: service.rs
back/src/application/config/: mod.rs  service.rs  test.rs
back/src/application/flags/: service.rs  test.rs
back/src/application/metrics/: service.rs
back/src/application/sending/: service.rs
back/src/domain/: mod.rs
back/src/domain/auth/: entities.rs
back/src/domain/config/: entities.rs  errors.rs  mod.rs  repository.rs
back/src/domain/flags/: entities.rs  errors.rs  mod.rs  repository.rs
back/src/domain/sending/: errors.rs  repository.rs
back/src/infrastructure/: mod.rs
back/src/infrastructure/config/: file_repository.rs  inmemory_repository.rs  mod.rs
back/src/infrastructure/flags/: inmemory_repository.rs  mod.rs  postgres_repository.rs
back/src/presentation/: api_docs.rs  mod.rs
back/src/presentation/auth/: controllers.rs  guard.rs  mod.rs
back/src/presentation/config/: controllers.rs
back/src/presentation/flags/: controllers.rs
back/src/presentation/sending/: controllers.rs
docs/design/: README.md
examples/: main_test.rs
flag_senders/: .dockerignore  Dockerfile  README.md  cli.py  errors.py  farm.py  flag_sender.py  pyproject.toml  ructf_tcp.py
flag_senders/farm/: __init__.py  client.py  http_client.py
flag_senders/protocols/: __init__.py  base_protocol.py  ructf_http.py  ructf_tcp.py  saar_tcp.py  sibir_http.py
flag_senders/tests/: conftest.py  test_ructf_tcp.py
front/: .dockerignore  .env.development  .env.production  .github-pre-commit-hook  .gitignore  Dockerfile  README.md  biome.json  next.config.mjs  package-lock.json  package.json
front/app/: globals.css  layout.tsx  page.tsx
front/components/: flag-dashboard-new.tsx  flag-dashboard.tsx  flag-details-modal.tsx  flag-submission-modal.tsx  login-form.tsx
front/components/dashboard/: FlagFilters.tsx  FlagPagination.tsx  FlagStats.tsx  FlagSubmitForm.tsx  FlagTable.tsx
front/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx
front/hooks/: useFilteredFlags.ts  useFlagStats.ts  useFlags.ts
front/lib/: auth-middleware.ts  backend-config.ts  config.ts  env-config.ts  env-init.ts  flag-status.ts  query-provider.tsx  types.ts
front/lib/api/: client.ts
front/public/: index.html
front/scripts/: ci-check.sh  docker-build.sh
front/src/: App.js  Auth.js  ConfigPage.js  Controller.js  FlagsList.js  JsonConfigPage.js  LoadingPage.js  NavBar.js  Statistic.js  Status.js  ThemeSwitcher.js  api.js  config.js  index.js  theme.js  useInterval.js
migrations/2023-07-27-174939_flags/: up.sql
src/: config.rs  cors.rs  errors.rs  lib.rs  main.rs  rocket_init.rs  schema.rs
src/application/: mod.rs
src/application/config/: service.rs  test.rs
src/application/flags/: service.rs  test.rs
src/application/sending/: service.rs
src/controllers/: config.rs  errors.rs  flag.rs  mod.rs  statistic.rs
src/db/: connection.rs  schema.rs
src/domain/: mod.rs
src/domain/auth/: entities.rs
src/domain/config/: entities.rs  repository.rs
src/domain/flags/: entities.rs  errors.rs  repository.rs
src/domain/sending/: repository.rs
src/handlers/: config_handler.rs  flag_handler.rs  mod.rs
src/infrastructure/config/: file_repository.rs
src/infrastructure/flags/: postgres_repository.rs
src/infrastructure/sending/: postgres_repository.rs
src/middleware/: auth.rs  cors.rs  db.rs  errors.rs  metrics.rs  mod.rs
src/models/: auth.rs  checksys.rs  flag.rs  mod.rs  statistic.rs
src/presentation/: mod.rs
src/protocols/: ctf01d_http.rs  forcad_http.rs  forkad_http.rs  mod.rs  ructf_tcp.rs
src/repos/: errors.rs  flag.rs  flags_repo.rs  mod.rs
src/settings/: mod.rs
tests/: bench.js  brute_ctf01d.py  brute_ructf.py  db_connection.rs  docker-compose.full.yml  docker-compose.yml  flag_controllers.rs  flag_repos_tests.rs  post_flag  post_flag.sh  run_start_sploit.sh
tests/check_system/: Dockerfile  pseudo_tcp.py
(+19 files in other folders)
