[package]
name = "sibears_farm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "=0.5.0-rc.3", features = ["json"]}
diesel = { version = "1.4.4", features = ["sqlite", "uuidv07", "chrono"] }
chrono = { version = "0.4.11", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
diesel_migrations = "1.4.0"
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
rand = "0.8.5"


[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_postgres_pool"]
