[package]
name = "sibears_farm"
version = "1.0.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "=0.5.0-rc.3", features = ["json"]}
diesel = { version = "2.2.0", features = ["chrono", "postgres", "r2d2"] }
chrono = { version = "0.4.11", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] } 
serde_json = { version = "1.0", features = ["preserve_order"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
diesel_migrations = "2.2.0"
rand = "0.8.5"
schemars = { version = "0.8.12", features = ["chrono"] }
reqwest = { version = "0.11", features = ["json", "blocking"] } # reqwest with JSON parsing support
tokio = { version = "1.31", features = ["full"] }
futures = "0.3.28"
phf = { version = "0.11", features = ["macros"] }
lazy_static = "1.4.0"
once_cell = "1.18.0"
regex = "1.9.3"
log = "0.4.19"
config = { version = "0.13.3", features = [] }
prometheus = "0.13.3"
rocket_prometheus = "0.10.0-rc.3"
strum = "0.26"
strum_macros = "0.26"
openssl = { version = "0.10", features = ["vendored"] }
thiserror = "1"
notify = "6.1.1"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }

#[dependencies.rocket_sync_db_pools]
#version = "0.1.0-rc.1"
#features = ["diesel_postgres_pool"]

[profile.release]
strip = true
lto = true

