[package]
name = "sibears_farm"
version = "1.0.3"
edition = "2018"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
diesel = { version = "2.2.0", features = ["chrono", "postgres", "r2d2"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
diesel_migrations = "2.2.0"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json", "blocking"] } # reqwest with JSON parsing support
tokio = { version = "1.31", features = ["full"] }
futures = "0.3.28"
regex = "1.9.3"
log = "0.4.19"
config = { version = "0.13.3", features = [] }
prometheus = "0.13.3"
strum = "0.26"
strum_macros = "0.26"
openssl = { version = "0.10", features = ["vendored"] }
thiserror = "1"
notify = "6.1.1"
env_logger = "0.11.5"
chrono = { version = "0.4.39", features = ["serde"] }
diesel-enum = "0.2.1"
schemars = { version = "0.8.21", features = ["chrono"] }
utoipa = { version = "5.2.0" }
rocket_cors = "0.6.0"
rocket_prometheus = "=0.10.1"


[profile.release]
strip = true
lto = true

