[package]
name = "sibears_farm"
version = "1.0.3"
edition = "2018"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1" }
regex = "1.11.1"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"
chrono = { version = "0.4.40", features = ["serde"] }
utoipa = { version = "5.3.1", features = ["chrono"] }
rocket_prometheus = "0.10.1"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "migrate",
] }
async-trait = "0.1.88"


[profile.release]
strip = true
lto = true
