[project]
name = "flag-senders"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=8.30.0",
    "pydantic>=2.10.2",
    "pytest>=8.3.4",
    "requests>=2.32.3",
]

[tool.ruff.format]
# Автоматически удаляет лишние пробелы в пустых строках
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"